RESOLVED FIXED111618
[BlackBerry] Selection handles don't drag to expand correctly for RTL languages
https://bugs.webkit.org/show_bug.cgi?id=111618
Summary [BlackBerry] Selection handles don't drag to expand correctly for RTL languages
Nima Ghanavatian
Reported 2013-03-06 13:13:46 PST
SSIA
Attachments
Patch (3.67 KB, patch)
2013-03-06 13:15 PST, Nima Ghanavatian
no flags
Patch (2.72 KB, patch)
2013-03-06 13:32 PST, Nima Ghanavatian
no flags
Nima Ghanavatian
Comment 1 2013-03-06 13:15:04 PST
Mike Fenton
Comment 2 2013-03-06 13:19:05 PST
Comment on attachment 191816 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=191816&action=review > Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:76 > + , m_isDirectionalOffsetSetToRTL(false) Is this variable needed? It's not used in this patch.
Nima Ghanavatian
Comment 3 2013-03-06 13:32:22 PST
Rob Buis
Comment 4 2013-03-06 13:39:38 PST
Comment on attachment 191820 [details] Patch LGTM.
WebKit Review Bot
Comment 5 2013-03-06 14:14:30 PST
Comment on attachment 191820 [details] Patch Clearing flags on attachment: 191820 Committed r144977: <http://trac.webkit.org/changeset/144977>
WebKit Review Bot
Comment 6 2013-03-06 14:14:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.